Mejora de diseño usando CSS grid

--- a/desarrollos.html
+++ b/desarrollos.html
@@ -10,20 +10,20 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container_desarrollos">
         <header>
             <img src="" alt="logo">
             <nav>
                 <ul class="nav-list">
                     <li><a href="index.html">¿index?</a></li>
-                    <li><a href="servicios.html">SERVICIOS</a></li>
+                    <li><a href="servicios.html">Servicios</a></li>
                     <li><a href="propiedades.html">Propiedades disponibles</a></li>
                     <li><a href="desarrollos.html">Desarrollos</a></li>
                     <li><a href="equipos.html">Equipos</a></li>
                 </ul>
             </nav>
         </header>
-        <aside><img src="" alt="imagen_1"></aside>
+        <aside class="imagen_1"><img src="" alt="imagen_1"></aside>
         <article class="article_seccion1">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus quia aperiam deleniti molestias ut
             quaerat, cumque sint excepturi, illo blanditiis labore eum eos aliquid quos vitae? Commodi neque hic
@@ -33,7 +33,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, inventore placeat, aut vero id iste nihil
             error, mollitia molestiae asperiores suscipit eum cumque velit laborum fugiat aperiam ducimus nam quisquam!
         </article>
-        <aside><img src="" alt="imagen_2"></aside>
+        <aside class="imagen_2"><img src="" alt="imagen_2"></aside>
         <footer>
             <p>
                 Derechos reservados <br>
