--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container_index">
     <header>
       <img src="" alt="logo">
       <nav>
         <ul class="nav-list">
           <li><a href="index.html">¿index?</a></li>
-          <li><a href="servicios.html">SERVICIOS</a></li>
+          <li><a href="servicios.html">Servicios</a></li>
           <li><a href="propiedades.html">Propiedades disponibles</a></li>
           <li><a href="desarrollos.html">Desarrollos</a></li>
           <li><a href="equipos.html">Equipos</a></li>
-        </ul> <hr>
+        </ul>
       </nav>
     </header>
-    <main>
+    <main class="main_index">
       <h1>Titulo</h1>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo cum ad, quod nostrum sequi ipsum repellat odio
         ducimus praesentium vitae illum repudiandae nemo asperiores in ex animi harum alias modi!</p>
     </main>
-    <footer>
+    <footer class="footer_index">
       <p>
         Derechos reservados <br>
         liantori.inmobiliaria@gmail.com <br>
