--- a/propiedades.html
+++ b/propiedades.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container_propiedades">
         <header>
             <img src="" alt="logo">
             <nav>
                 <ul class="nav-list">
                     <li><a href="index.html">¿index?</a></li>
-                    <li><a href="servicios.html">SERVICIOS</a></li>
+                    <li><a href="servicios.html">Servicios</a></li>
                     <li><a href="propiedades.html">Propiedades disponibles</a></li>
                     <li><a href="desarrollos.html">Desarrollos</a></li>
                     <li><a href="equipos.html">Equipos</a></li>
