--- a/equipos.html
+++ b/equipos.html
@@ -10,20 +10,33 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container_equipos">
         <header>
             <img src="" alt="logo">
             <nav>
                 <ul class="nav-list">
                     <li><a href="index.html">¿index?</a></li>
-                    <li><a href="servicios.html">SERVICIOS</a></li>
+                    <li><a href="servicios.html">Servicios</a></li>
                     <li><a href="propiedades.html">Propiedades disponibles</a></li>
                     <li><a href="desarrollos.html">Desarrollos</a></li>
                     <li><a href="equipos.html">Equipos</a></li>
                 </ul>
             </nav>
         </header>
-
+        <section class="section1">
+            <aside class="aside_tlahui"><img src="" alt="tlahui_img"></aside>
+            <article class="article_tlahui">
+                <h1>Tlahuimitl Rodriguez</h1>
+                <p>CEO of liantori real state</p>
+            </article>
+        </section>
+        <section class="section2">
+            <aside class="aside_mada"><img src="" alt="mada_img"></aside>
+            <article class="article_mada">
+                <h1>Margarita</h1>
+                <p>CMO of liantori real state</p>
+            </article>
+        </section>
         <footer>
             <p>
                 Derechos reservados <br>
