--- a/servicios.html
+++ b/servicios.html
@@ -10,20 +10,20 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container_servicios">
         <header>
             <img src="" alt="logo">
             <nav>
                 <ul class="nav-list">
                     <li><a href="index.html">¿index?</a></li>
-                    <li><a href="servicios.html">SERVICIOS</a></li>
+                    <li><a href="servicios.html">Servicios</a></li>
                     <li><a href="propiedades.html">Propiedades disponibles</a></li>
                     <li><a href="desarrollos.html">Desarrollos</a></li>
                     <li><a href="equipos.html">Equipos</a></li>
                 </ul>
             </nav>
         </header>
-
+        <main>Aqui podrian ir los servicios separados del index/home si lo deseas</main>
         <footer>
             <p>
                 Derechos reservados <br>
