--- a/index.html
+++ b/index.html
@@ -6,27 +6,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Liantori</title>
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
+  <script defer src="script.js"></script>
 </head>
 
 <body>
-  <div class="container_index">
-    <header>
-      <img src="" alt="logo">
-      <nav>
-        <ul class="nav-list">
-          <li><a href="index.html">¿index?</a></li>
-          <li><a href="servicios.html">Servicios</a></li>
-          <li><a href="propiedades.html">Propiedades disponibles</a></li>
-          <li><a href="desarrollos.html">Desarrollos</a></li>
-          <li><a href="equipos.html">Equipos</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main class="main_index">
-      <h1>Titulo</h1>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo cum ad, quod nostrum sequi ipsum repellat odio
-        ducimus praesentium vitae illum repudiandae nemo asperiores in ex animi harum alias modi!</p>
-    </main>
+  <header>
+    <a href="index.html">
+      <h1 class="logo">LIANTORI</h1>
+    </a>
+    <button class="menu_button">
+      <svg class="svg" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+        viewBox="0 0 16 16">
+        <path fill-rule="evenodd"
+          d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+      </svg>
+    </button>
+    <nav class="nav">
+      <ul class="nav-list">
+        <li><a href="index.html">Sobre nosotros</a></li>
+        <li><a href="servicios.html">Servicios</a></li>
+        <li><a href="propiedades.html">Propiedades disponibles</a></li>
+        <li><a href="desarrollos.html">Desarrollos</a></li>
+        <li><a href="equipos.html">Equipos</a></li>
+      </ul>
+    </nav>
+  </header>
+    <div class="container_index">
+      <section class="imagenes_index">
+        <img src="" alt="img1">
+        <img src="" alt="img2">
+        <img src="" alt="img3">
+      </section>
+      <main class="main_index">
+        <h1>Titulo</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo cum ad, quod nostrum sequi ipsum repellat odio
+          ducimus praesentium vitae illum repudiandae nemo asperiores in ex animi harum alias modi!</p>
+      </main>
+    </div>
     <footer class="footer_index">
       <p>
         Derechos reservados <br>
@@ -34,7 +50,6 @@
         3333333333
       </p>
     </footer>
-  </div>
 </body>
 
 </html>
