--- a/propiedades.html
+++ b/propiedades.html
@@ -7,22 +7,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Propiedades disponibles</title>
     <link rel="stylesheet" href="stylesheet.css" type="text/css">
+    <script defer src="script.js"></script>
 </head>
 
 <body>
+    <header>
+        <a href="index.html">
+            <h1 class="logo">LIANTORI</h1>
+        </a>
+        <button class="menu_button">
+            <svg class="svg" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-list" viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+            </svg>
+        </button>
+        <nav class="nav">
+            <ul class="nav-list">
+                <li><a href="index.html">Sobre nosotros</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="propiedades.html">Propiedades disponibles</a></li>
+                <li><a href="desarrollos.html">Desarrollos</a></li>
+                <li><a href="equipos.html">Equipos</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="container_propiedades">
-        <header>
-            <img src="" alt="logo">
-            <nav>
-                <ul class="nav-list">
-                    <li><a href="index.html">¿index?</a></li>
-                    <li><a href="servicios.html">Servicios</a></li>
-                    <li><a href="propiedades.html">Propiedades disponibles</a></li>
-                    <li><a href="desarrollos.html">Desarrollos</a></li>
-                    <li><a href="equipos.html">Equipos</a></li>
-                </ul>
-            </nav>
-        </header>
         <aside class="aside_casa1"><img src="" alt="imagen_1"></aside>
         <article class="article_casa1">
             <h4>Casa_1</h4>
@@ -44,14 +54,14 @@
                 voluptates, amet qui eligendi ipsum a, hic, magni laudantium culpa fugiat neque repellat earum tempora.
             </p>
         </article>
-        <footer>
-            <p>
-                Derechos reservados <br>
-                liantori.inmobiliaria@gmail.com <br>
-                3333333333
-            </p>
-        </footer>
     </div>
+    <footer>
+        <p>
+            Derechos reservados <br>
+            liantori.inmobiliaria@gmail.com <br>
+            3333333333
+        </p>
+    </footer>
 </body>
 
 </html>
