--- a/servicios.html
+++ b/servicios.html
@@ -7,31 +7,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios</title>
     <link rel="stylesheet" href="stylesheet.css" type="text/css">
+    <script defer src="script.js"></script>
 </head>
 
 <body>
+    <header>
+        <a href="index.html">
+            <h1 class="logo">LIANTORI</h1>
+        </a>
+        <button class="menu_button">
+            <svg class="svg" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-list" viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+            </svg>
+        </button>
+        <nav class="nav">
+            <ul class="nav-list">
+                <li><a href="index.html">Sobre nosotros</a></li>
+                <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="propiedades.html">Propiedades disponibles</a></li>
+                <li><a href="desarrollos.html">Desarrollos</a></li>
+                <li><a href="equipos.html">Equipos</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="container_servicios">
-        <header>
-            <img src="" alt="logo">
-            <nav>
-                <ul class="nav-list">
-                    <li><a href="index.html">¿index?</a></li>
-                    <li><a href="servicios.html">Servicios</a></li>
-                    <li><a href="propiedades.html">Propiedades disponibles</a></li>
-                    <li><a href="desarrollos.html">Desarrollos</a></li>
-                    <li><a href="equipos.html">Equipos</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>Aqui podrian ir los servicios separados del index/home si lo deseas</main>
-        <footer>
-            <p>
-                Derechos reservados <br>
-                liantori.inmobiliaria@gmail.com <br>
-                3333333333
-            </p>
-        </footer>
+        <fieldset class="fieldset_ancla_servicios">
+            <h4 class="fieldset_contenido">Contenidos</h4>
+            <ul>
+                <li><a href="#administracion">Administracion</a></li>
+                <li><a href="#desarrollos">Desarrollos</a></li>
+                <li><a href="#fliping">Fliping</a></li>
+                <li><a href="#ventas">Ventas</a></li>
+                <li><a href="#rentas">Rentas</a></li>
+            </ul>
+        </fieldset>
+        <article class="administracion">
+            <a name="administracion"></a>
+            Administracion
+        </article>
+        <article class="desarrollos">
+            <a name="desarrollos"></a>
+            Desarrollos
+        </article>
+        <article class="fliping">
+            <a name="fliping"></a>
+            Fliping
+        </article>
+        <article class="ventas">
+            <a name="ventas"></a>
+            Ventas
+        </article>
+        <article class="rentas">
+            <a name="rentas"></a>
+            Rentas
+        </article>
     </div>
+    <footer>
+        <p>
+            Derechos reservados <br>
+            liantori.inmobiliaria@gmail.com <br>
+            3333333333
+        </p>
+    </footer>
 </body>
 
 </html>
