--- a/html/equipos.html
+++ b/html/equipos.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equipos</title>
-    <link rel="stylesheet" href="stylesheet.css" type="text/css">
-    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="../css/stylesheet.css" type="text/css">
+    <script defer src="../javascript/script.js"></script>
 </head>
 
 <body>
