--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Liantori</title>
-  <link rel="stylesheet" href="stylesheet.css" type="text/css">
-  <script defer src="script.js"></script>
+  <link rel="stylesheet" href="../css/stylesheet.css" type="text/css">
+  <script defer src="../javascript/script.js"></script>
 </head>
 
 <body>
