--- a/html/servicios.html
+++ b/html/servicios.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios</title>
-    <link rel="stylesheet" href="stylesheet.css" type="text/css">
-    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="../css/stylesheet.css" type="text/css">
+    <script defer src="../javascript/script.js"></script>
 </head>
 
 <body>
@@ -45,23 +45,48 @@
         </fieldset>
         <article class="administracion">
             <a name="administracion"></a>
-            Administracion
+            <h3>Administracion</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid corporis deserunt, at nobis nihil
+                praesentium accusamus, officiis nostrum necessitatibus accusantium veritatis in, eaque corrupti
+                dignissimos laboriosam hic rem. Nemo, sunt.
+            </p>
         </article>
         <article class="desarrollos">
             <a name="desarrollos"></a>
-            Desarrollos
+            <h3>Desarrollos</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente sint officiis voluptas debitis animi
+                unde expedita! Molestiae a voluptatum velit accusantium repellendus. Exercitationem iste doloremque odio
+                inventore, quaerat et veritatis?
+            </p>
         </article>
         <article class="fliping">
             <a name="fliping"></a>
-            Fliping
+            <h3>Fliping</h3>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe, molestiae? Sunt, non sequi illum
+                eveniet laudantium laboriosam excepturi similique saepe nisi dolor, eaque alias cupiditate sit modi sed
+                ipsum minima?
+            </p>
         </article>
         <article class="ventas">
             <a name="ventas"></a>
-            Ventas
+            <h3>Ventas</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, magnam sequi, unde tempora mollitia
+                itaque corporis quod minus dolores, deserunt cupiditate rerum non aperiam aut illum! Earum, quis. Nobis,
+                minima!
+            </p>
         </article>
         <article class="rentas">
             <a name="rentas"></a>
-            Rentas
+            <h3>Rentas</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro repellat reprehenderit aspernatur at,
+                saepe, modi perspiciatis est sint eum et autem aliquid expedita doloribus. Saepe modi libero enim
+                maiores quia.
+            </p>
         </article>
     </div>
     <footer>
