Agregacion de imagenes

--- a/html/desarrollos.html
+++ b/html/desarrollos.html
@@ -34,7 +34,7 @@
   </header>
   <div class="container_desarrollos">
     <section class="section_desarrollos">
-      <aside class="imagen_1"><img src="" alt="imagen_1"></aside>
+      <aside class="imagen_1"><img src="../images/interior_casa.jpg" alt="imagen_1"></aside>
       <article class="article_seccion1">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus quia aperiam deleniti molestias ut
         quaerat, cumque sint excepturi, illo blanditiis labore eum eos aliquid quos vitae? Commodi neque hic
