--- a/html/equipos.html
+++ b/html/equipos.html
@@ -34,14 +34,14 @@
     </header>
     <div class="container_equipos">
         <section class="section1">
-            <aside class="aside_tlahui"><img src="" alt="tlahui_img"></aside>
+            <aside class="aside_tlahui"><img src="../images/Tlahui_img.png" alt="tlahui_img"></aside>
             <article class="article_tlahui">
                 <h1>Tlahuimitl Rodriguez</h1>
                 <p>CEO of liantori real estate</p>
             </article>
         </section>
         <section class="section2">
-            <aside class="aside_mada"><img src="" alt="mada_img"></aside>
+            <aside class="aside_mada"><img src="../images/Mada_img.png" alt="mada_img"></aside>
             <article class="article_mada">
                 <h1>Margarita</h1>
                 <p>CMO of liantori real estate</p>
