--- a/html/index.html
+++ b/html/index.html
@@ -33,9 +33,9 @@
   </header>
     <div class="container_index">
       <section class="imagenes_index">
-        <img src="" alt="img1">
-        <img src="" alt="img2">
-        <img src="" alt="img3">
+        <img src="../images/casa1.jpeg" alt="img1">
+        <img src="../images/casa2.jpg" alt="img2">
+        <img src="../images/casa3.jpg" alt="img3">
       </section>
       <main class="main_index">
         <h1>Titulo</h1>
