--- a/html/propiedades.html
+++ b/html/propiedades.html
@@ -34,7 +34,7 @@
     </header>
     <div class="container_propiedades">
         <section class="section_casa1">
-            <aside class="aside_casa1"><img src="" alt="imagen_1"></aside>
+            <aside class="aside_casa1"><img src="../images/casa1.jpeg" alt="imagen_1"></aside>
             <article class="article_casa1">
                 <h4>Casa_1</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dolores in adipisci ad corrupti
@@ -45,7 +45,7 @@
             </article>
         </section>
         <section class="section_casa2">
-            <aside class="aside_casa2"><img src="" alt="imagen_2"></aside>
+            <aside class="aside_casa2"><img src="../images/casa2.jpg" alt="imagen_2"></aside>
             <article class="article_casa2">
                 <h4>Casa_2</h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis id at et ut illo quia aperiam
@@ -54,7 +54,7 @@
             </article>
         </section>
         <section class="section_casa3">
-            <aside class="aside_casa3"><img src="" alt="imagen_3"></aside>
+            <aside class="aside_casa3"><img src="../images/casa3.jpg" alt="imagen_3"></aside>
             <article class="article_casa3">
                 <h4>Casa_3</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dolores in adipisci ad corrupti
