page EQUIPOS deleted, text added, img responsive in DESARROLLOS

--- a/html/desarrollos.html
+++ b/html/desarrollos.html
@@ -28,18 +28,17 @@
         <li><a href="servicios.html">Servicios</a></li>
         <li><a href="propiedades.html">Propiedades disponibles</a></li>
         <li><a href="desarrollos.html">Desarrollos</a></li>
-        <li><a href="equipos.html">Equipos</a></li>
       </ul>
     </nav>
   </header>
   <div class="container_desarrollos">
     <section class="section_desarrollos">
-      <aside class="imagen_1"><img src="../images/interior_casa.jpg" alt="imagen_1"></aside>
       <article class="article_seccion1">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus quia aperiam deleniti molestias ut
         quaerat, cumque sint excepturi, illo blanditiis labore eum eos aliquid quos vitae? Commodi neque hic
         nostrum.
       </article>
+      <aside class="imagen_1"><img src="../images/interior_casa.jpg" alt="imagen_1"></aside>
     </section>
     <main class="main_desarrollos">
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum accusantium, doloribus quia adipisci
@@ -49,9 +48,10 @@
   </div>
   <footer>
     <p>
-      Derechos reservados <br>
+      Derechos reservados por Liantori <br>
+      LIANTORI SAPI de CV. <br>
       liantori.inmobiliaria@gmail.com <br>
-      3333333333
+      3312708567
     </p>
   </footer>
 </body>
