--- a/html/index.html
+++ b/html/index.html
@@ -27,29 +27,34 @@
         <li><a href="servicios.html">Servicios</a></li>
         <li><a href="propiedades.html">Propiedades disponibles</a></li>
         <li><a href="desarrollos.html">Desarrollos</a></li>
-        <li><a href="equipos.html">Equipos</a></li>
+
       </ul>
     </nav>
   </header>
-    <div class="container_index">
-      <section class="imagenes_index">
-        <img src="../images/casa1.jpeg" alt="img1">
-        <img src="../images/casa2.jpg" alt="img2">
-        <img src="../images/casa3.jpg" alt="img3">
-      </section>
-      <main class="main_index">
-        <h1>Titulo</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo cum ad, quod nostrum sequi ipsum repellat odio
-          ducimus praesentium vitae illum repudiandae nemo asperiores in ex animi harum alias modi!</p>
-      </main>
-    </div>
-    <footer class="footer_index">
+  <div class="container_index">
+    <section class="imagenes_index">
+      <img src="../images/casa1.jpeg" alt="img1">
+      <img src="../images/casa2.jpg" alt="img2">
+      <img src="../images/casa3.jpg" alt="img3">
+    </section>
+    <main class="main_index">
+      <h1>Aqui puede ir un titulo, si es que me dan uno</h1>
       <p>
-        Derechos reservados <br>
-        liantori.inmobiliaria@gmail.com <br>
-        3333333333
+        Somos una empresa inovadora con amplia experiencia en el mercado, tenemos 30 años de experiencia a tu servicio.
+        <br>
+        Ofrecemos nuestros servicios inmobiliarios de manera confiable, integral y versátil, capacitados para dar la
+        mayor satisfacción a cada uno de nuestros clientes.
       </p>
-    </footer>
+    </main>
+  </div>
+  <footer class="footer_index">
+    <p>
+      Derechos reservados por Liantori <br>
+      LIANTORI SAPI de CV. <br>
+      liantori.inmobiliaria@gmail.com <br>
+      3312708567
+    </p>
+  </footer>
 </body>
 
 </html>
