--- a/html/propiedades.html
+++ b/html/propiedades.html
@@ -28,7 +28,6 @@
                 <li><a href="servicios.html">Servicios</a></li>
                 <li><a href="propiedades.html">Propiedades disponibles</a></li>
                 <li><a href="desarrollos.html">Desarrollos</a></li>
-                <li><a href="equipos.html">Equipos</a></li>
             </ul>
         </nav>
     </header>
@@ -67,9 +66,10 @@
     </div>
     <footer>
         <p>
-            Derechos reservados <br>
+            Derechos reservados por Liantori <br>
+            LIANTORI SAPI de CV. <br>
             liantori.inmobiliaria@gmail.com <br>
-            3333333333
+            3312708567
         </p>
     </footer>
 </body>
