--- a/html/servicios.html
+++ b/html/servicios.html
@@ -28,7 +28,7 @@
                 <li><a href="servicios.html">Servicios</a></li>
                 <li><a href="propiedades.html">Propiedades disponibles</a></li>
                 <li><a href="desarrollos.html">Desarrollos</a></li>
-                <li><a href="equipos.html">Equipos</a></li>
+
             </ul>
         </nav>
     </header>
@@ -37,7 +37,6 @@
             <h4 class="fieldset_contenido">Contenidos</h4>
             <ul>
                 <li><a href="#administracion">Administracion</a></li>
-                <li><a href="#desarrollos">Desarrollos</a></li>
                 <li><a href="#fliping">Fliping</a></li>
                 <li><a href="#ventas">Ventas</a></li>
                 <li><a href="#rentas">Rentas</a></li>
@@ -47,53 +46,40 @@
             <a name="administracion"></a>
             <h3>Administracion</h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid corporis deserunt, at nobis nihil
-                praesentium accusamus, officiis nostrum necessitatibus accusantium veritatis in, eaque corrupti
-                dignissimos laboriosam hic rem. Nemo, sunt.
-            </p>
-        </article>
-        <article class="desarrollos">
-            <a name="desarrollos"></a>
-            <h3>Desarrollos</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente sint officiis voluptas debitis animi
-                unde expedita! Molestiae a voluptatum velit accusantium repellendus. Exercitationem iste doloremque odio
-                inventore, quaerat et veritatis?
+                Nosotros te ayudamos a llevar a cabo la organizacion de tu inmueble y ejecutar los procesos de los
+                acuerdos con la finalidad de mantener la plusvalia de tu inmueble.
             </p>
         </article>
         <article class="fliping">
             <a name="fliping"></a>
             <h3>Fliping</h3>
             <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe, molestiae? Sunt, non sequi illum
-                eveniet laudantium laboriosam excepturi similique saepe nisi dolor, eaque alias cupiditate sit modi sed
-                ipsum minima?
+                Compramos la propiedad y nos encargamos de la renovacion de esta para aumentar el valor y venderla.
             </p>
         </article>
         <article class="ventas">
             <a name="ventas"></a>
             <h3>Ventas</h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, magnam sequi, unde tempora mollitia
-                itaque corporis quod minus dolores, deserunt cupiditate rerum non aperiam aut illum! Earum, quis. Nobis,
-                minima!
+                Te ayudamos a administrar la venta de tu inmueble desde la busqueda de comprador hasta la firma de
+                contrato.
             </p>
         </article>
         <article class="rentas">
             <a name="rentas"></a>
             <h3>Rentas</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro repellat reprehenderit aspernatur at,
-                saepe, modi perspiciatis est sint eum et autem aliquid expedita doloribus. Saepe modi libero enim
-                maiores quia.
+                Nosotros administramos tu inmueble para que mes con mes recibas una cantidad de dinero por la renta de
+                la propiedad.
             </p>
         </article>
     </div>
     <footer>
         <p>
-            Derechos reservados <br>
+            Derechos reservados por Liantori <br>
+            LIANTORI SAPI de CV. <br>
             liantori.inmobiliaria@gmail.com <br>
-            3333333333
+            3312708567
         </p>
     </footer>
 </body>
