bug cambio de img fixed

--- a/html/propiedades.html
+++ b/html/propiedades.html
@@ -33,7 +33,7 @@
     </header>
     <div class="container_propiedades">
         <section class="section_casa1">
-            <aside class="aside_casa1" id="propiedad_img1">
+            <aside class="aside_casa1" id="propiedad_aside1">
                 <button class="btnAnterior" onclick="proyector('casa1','anterior')">&lt</button>
                 <button class="btnSiguiente" onclick="proyector('casa1','siguiente')">&gt</button>
             </aside>
@@ -47,7 +47,7 @@
             </article>
         </section>
         <section class="section_casa2">
-            <aside class="aside_casa2" id="propiedad_img2">
+            <aside class="aside_casa2" id="propiedad_aside2">
                 <button class="btnAnterior" onclick="proyector('casa2','anterior')">&lt</button>
                 <button class="btnSiguiente" onclick="proyector('casa2','siguiente')">&gt</button>
             </aside>
@@ -59,7 +59,7 @@
             </article>
         </section>
         <section class="section_casa3">
-            <aside class="aside_casa3" id="propiedad_img3">
+            <aside class="aside_casa3" id="propiedad_aside3">
                 <button class="btnAnterior" onclick="proyector('casa3', 'anterior')">&lt</button>
                 <button class="btnSiguiente" onclick="proyector('casa3', 'siguiente')">&gt</button>
             </aside>
