--- a/servicios.html
+++ b/servicios.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liantori - Servicios</title>
     <link rel="stylesheet" href="../css/stylesheet.css" type="text/css">
+    <link rel="icon" href="images/liantori-small-logo.jpeg" type="image/x-icon">
     <script defer src="../javascript/script.js"></script>
 </head>
 
