--- a/propiedades.html
+++ b/propiedades.html
@@ -28,6 +28,7 @@
                 <li><a href="index.html">Sobre nosotros</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
                 <li><a href="propiedades.html">Propiedades disponibles</a></li>
+                <li><a href="condiciones.html">Condiciones</a></li>
             </ul>
         </nav>
     </header>
